--- a/sass/partiales/_header.scss
+++ b/sass/partiales/_header.scss
@@ -51,7 +51,6 @@
             }
             .head__nav__link{
                 text-align: center;
-                width: 100vw;
                 max-width: 768px;
                 min-width: 320px;
                 ul li{
@@ -105,6 +104,8 @@
                     }
                 }
                 .head__nav__link{
+                    justify-self: center;
+                    align-self: center;
                     ul {
                         li{
                             float: right;
