--- a/sass/partiales/_main.scss
+++ b/sass/partiales/_main.scss
@@ -87,7 +87,61 @@
                     }
                 }
             }
-
+          
         }
     }
 }
+
+    //*  tablet - desktop*//
+
+
+    @media (min-width: 768px) {
+        #imagen{
+            display: flex;
+            width: 100vw;
+            max-width: 1200px;
+            min-width: 768px;
+            height:auto;
+            justify-content: center;
+            align-content: center;
+            img{
+                width: 100vw;
+                justify-self: center;
+                align-self: center;
+                -webkit-animation: rotate-diagonal-1 1.5s linear both;
+            animation: rotate-diagonal-1 1.5s linear both;
+            }
+            @-webkit-keyframes rotate-diagonal-1 {
+                0% {
+                -webkit-transform: rotate3d(1, 1, 0, 0deg);
+                        transform: rotate3d(1, 1, 0, 0deg);
+                }
+                50% {
+                -webkit-transform: rotate3d(1, 1, 0, -180deg);
+                        transform: rotate3d(1, 1, 0, -180deg);
+                }
+                100% {
+                -webkit-transform: rotate3d(1, 1, 0, -360deg);
+                        transform: rotate3d(1, 1, 0, -360deg);
+                }
+            }
+            @keyframes rotate-diagonal-1 {
+                0% {
+                -webkit-transform: rotate3d(1, 1, 0, 0deg);
+                        transform: rotate3d(1, 1, 0, 0deg);
+                }
+                50% {
+                -webkit-transform: rotate3d(1, 1, 0, -180deg);
+                        transform: rotate3d(1, 1, 0, -180deg);
+                }
+                100% {
+                -webkit-transform: rotate3d(1, 1, 0, -360deg);
+                        transform: rotate3d(1, 1, 0, -360deg);
+                }
+            }
+            .imagen__video{
+                justify-self: center;
+                align-self: center;
+            }
+        }
+    }
