--- a/sass/partiales/_header.scss
+++ b/sass/partiales/_header.scss
@@ -2,16 +2,17 @@
 @use "../base/globales";
 
 /** mobile **/
-.head{
-    background-color: red;
-
+#body__grid{
+    margin: 0px;
+    padding: 0%;
+    .head{
+        width: 100vw;
         .head__nav{
             display: grid;
             grid-template-columns: auto;
             grid-template-rows: auto auto;
             background-color: map-get(globales.$backgrand, bg-color );
             background-image: map-get(globales.$backgrand, bg-image );
-            border-radius: map-get(globales.$backgrand, b-radius );
             .head__nav__titulo{
                 text-align: center;
                 width: 100vw;
@@ -30,13 +31,13 @@
                     @keyframes rotate-scale-up-diag-1 {
                         0% {
                             transform: scale(.0.8) rotate3d(1, 1, 0, 0deg);
-                          }
-                          50% {
+                        }
+                        50% {
                             transform: scale(0.5) rotate3d(1, 1, 0, -180deg);
-                          }
-                          100% {
+                        }
+                        100% {
                             transform: scale(0.8) rotate3d(1, 1, 0, -360deg);
-                          }
+                        }
                         }
                 h1 {
                     color: variable.$colorletra;
@@ -86,13 +87,13 @@
                     @keyframes rotate-scale-up-diag-1 {
                         0% {
                             transform: scale(.5) rotate3d(1, 1, 0, 0deg);
-                          }
-                          50% {
+                        }
+                        50% {
                             transform: scale(0.8) rotate3d(1, 1, 0, -180deg);
-                          }
-                          100% {
+                        }
+                        100% {
                             transform: scale(0.5) rotate3d(1, 1, 0, -360deg);
-                          }
+                        }
                     }
                     p{
                         display: grid;
@@ -118,7 +119,7 @@
                                 font-size: 25px;
                             }
                             -webkit-animation: rotate-vert-center 1.5s ;
-	                            animation: rotate-vert-center 1.5s ;
+                                animation: rotate-vert-center 1.5s ;
                             @-webkit-keyframes rotate-vert-center {
                                 0% {
                                 -webkit-transform: rotateY(0);
@@ -145,3 +146,4 @@
             }
         }
     }
+}
