--- a/sass/partiales/_main.scss
+++ b/sass/partiales/_main.scss
@@ -3,14 +3,14 @@
 
 @mixin bg-main {
     background-image: url(/img/img\ header.jpg);
-    background-size: cover;
-    border-radius: 2%;    
+    background-size: cover;  
 }
 
 /** mobile **/
 .main{
     @include bg-main;
     display: grid;
+    width: 100vw;
     section{
         article{
             #imagen{
@@ -58,14 +58,14 @@
                     width: 140px;
                     height: 40px;
                     font-size: (variable.$tamanoh)/3;
-                    font-family: 'Fuzzy Bubbles', cursive;
-                    border-bottom: 8px solid rgb(56, 101, 116);
-                    border-radius: 5%;
+                    font-family: variable.$tipoletra;
+                    border-bottom: map-get(globales.$boton , border-bottom );
+                    border-radius: map-get(globales.$boton , border-radis);
                     &:hover{
                         background-color: #0093E9;
                         background-image: linear-gradient(135deg, #05649b 0%, #539b93 50%, #e58888 100%);
-                        border-radius: 5%;
-                        font-size: 25px;
+                        border-radius: map-get(globales.$boton , border-radius );
+                        font-size: (variable.$tamanoh)/1.6;
                     }
                 }
                 a{
@@ -75,8 +75,8 @@
                     justify-self: center;
                     text-align: center;
                     text-decoration: none;
-                    font-size: 20px;
-                    font-family: 'Fuzzy Bubbles', cursive;
+                    font-size: (variable.$tamanoh)/2;
+                    font-family: variable.$tipoletra;
                     color: rgb(220, 96, 30);
                     &:hover{
                         background-color: #0093E9;
@@ -105,9 +105,10 @@
             justify-content: center;
             align-content: center;
             img{
-                width: 100vw;
+                width: 50px;
                 justify-self: center;
                 align-self: center;
+                margin: 30px;
                 -webkit-animation: rotate-diagonal-1 1.5s linear both;
             animation: rotate-diagonal-1 1.5s linear both;
             }
