--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,4 +3,5 @@
 @use "./base/globales";
 @use "./partiales/main";
 @use "./partiales/footer";
-@use "../sass/partiales/servicios";
+@use "./partiales/servicios";
+@use "./partiales/contactos";
