--- a/sass/base/_variable.scss
+++ b/sass/base/_variable.scss
@@ -3,7 +3,7 @@ $center:center;
 
 $colorletra: rgb(8, 109, 112);
 
-$colortitulo: blue;
+$colortitulo: rgb(110, 248, 229);
 
 $tipoletra: 'Fuzzy Bubbles', cursive;
 
