--- a/sass/partiales/_footer.scss
+++ b/sass/partiales/_footer.scss
@@ -127,12 +127,40 @@
                     display: flex;
                     align-self: center;
                     justify-content: center;
-                    a img{
-                        width: 80px;
-                     }
-                 }
-              }
+                    margin-top: 10px;
+                    width: 50px;
+                    -webkit-animation: rotate-diagonal-1 1.5s linear both;
+                        animation: rotate-diagonal-1 1.5s linear both;
+                      }
+                      @-webkit-keyframes rotate-diagonal-1 {
+                        0% {
+                          -webkit-transform: rotate3d(1, 1, 0, 0deg);
+                                  transform: rotate3d(1, 1, 0, 0deg);
+                        }
+                        50% {
+                          -webkit-transform: rotate3d(1, 1, 0, -180deg);
+                                  transform: rotate3d(1, 1, 0, -180deg);
+                        }
+                        100% {
+                          -webkit-transform: rotate3d(1, 1, 0, -360deg);
+                                  transform: rotate3d(1, 1, 0, -360deg);
+                        }
+                      }
+                      @keyframes rotate-diagonal-1 {
+                        0% {
+                          -webkit-transform: rotate3d(1, 1, 0, 0deg);
+                                  transform: rotate3d(1, 1, 0, 0deg);
+                        }
+                        50% {
+                          -webkit-transform: rotate3d(1, 1, 0, -180deg);
+                                  transform: rotate3d(1, 1, 0, -180deg);
+                        }
+                        100% {
+                          -webkit-transform: rotate3d(1, 1, 0, -360deg);
+                                  transform: rotate3d(1, 1, 0, -360deg);
+                        }
+                    }
+                }
+            }
+        }
     }
-   
-    }
-}
