--- a/css/style.css
+++ b/css/style.css
@@ -270,6 +270,7 @@
     align-self: center;
   }
 }
+/** tarifas **/
 #footer {
   display: grid;
   grid-template-columns: auto;
@@ -301,32 +302,45 @@
   grid-area: buttom;
   grid-template-columns: 1fr;
   grid-template-rows: auto auto;
+  grid-template-areas: "inicio" "redes";
+  background-image: url(/img/footer-redes-sociales.jpg);
+  background-size: cover;
+  opacity: 75%;
   width: 100vw;
   max-width: 768px;
   min-width: 320px;
   overflow: hidden;
   position: relative;
   box-sizing: border-box;
+  border-radius: 40%;
 }
-#footer .footer__div .card button {
-  padding: 5px;
-  width: 140px;
-  height: 40px;
+#footer .footer__div .car {
+  grid-area: inicio;
+  text-align: center;
+  width: 100vw;
+  max-width: 768px;
+  min-width: 320px;
+}
+#footer .footer__div .car button {
   font-size: 13.3333333333px;
   font-family: "Fuzzy Bubbles", cursive;
   border-bottom: 8px solid rgb(56, 101, 116);
   border-radius: 5%;
+  margin: 10px;
 }
-#footer .footer__div .card button a {
+#footer .footer__div .car button a {
+  justify-self: center;
   font-family: "Fuzzy Bubbles", cursive;
+  text-align: center;
 }
-#footer .footer__div .card button a:hover {
+#footer .footer__div .car button a:hover {
   background-color: #0093E9;
   background-image: linear-gradient(135deg, #05649b 0%, #539b93 50%, #e58888 100%);
   border-radius: 5%;
   font-size: 20px;
 }
 #footer .footer__div .footer__div__a {
+  grid-area: redes;
   text-align: center;
   width: 100vw;
   max-width: 768px;
@@ -334,6 +348,7 @@
 }
 #footer .footer__div .footer__div__a ul li {
   list-style: none;
+  padding: 2px;
 }
 #footer .footer__div .footer__div__a ul li a img {
   overflow: hidden;
@@ -341,6 +356,7 @@
   box-sizing: border-box;
   width: 35px;
   height: 35px;
+  margin-right: 30px;
 }
 
 @media (min-width: 768px) {
@@ -373,6 +389,15 @@
     justify-content: right;
     width: 25vw;
     height: 5vw;
+  }
+  #footer .footer__div .car button {
+    text-align: center;
+    margin-top: 10px;
+    width: 140px;
+    height: 40px;
+    font-size: 13.3333333333px;
+    font-family: "Fuzzy Bubbles", cursive;
+    border-bottom: 8px solid rgb(56, 101, 116);
   }
   #footer .footer__div .car button a {
     font-size: 20px;
