--- a/sass/partiales/_footer.scss
+++ b/sass/partiales/_footer.scss
@@ -33,23 +33,35 @@
         grid-area: buttom;
         grid-template-columns: 1fr;
         grid-template-rows: auto auto;
+        grid-template-areas: 
+        "inicio"
+        "redes";
+        background-image: map-get(globales.$backgrand, bg-footer );
+        background-size: cover;
+        opacity: 75%;
         width: 100vw;
         max-width: 768px;
         min-width: 320px;
         overflow: hidden;
         position: relative;
         box-sizing: border-box; 
-        .card{
+        border-radius: map-get(globales.$backgrand, b-radius )*20;
+        .car{
+            grid-area: inicio;
+            text-align: center;
+            width: 100vw;
+            max-width: 768px;
+            min-width: 320px;
             button{
-                padding: 5px;
-                width: 140px;
-                height: 40px;
                 font-size: (variable.$tamanoh)/3;
                 font-family: 'Fuzzy Bubbles', cursive;
                 border-bottom: 8px solid rgb(56, 101, 116);
                 border-radius: 5%;
+                margin: 10px;
                 a{
+                    justify-self: center;
                     font-family: variable.$tipoletra;              
+                    text-align: center;
                     &:hover{
                         background-color: #0093E9;
                         background-image: linear-gradient(135deg, #05649b 0%, #539b93 50%, #e58888 100%);
@@ -60,18 +72,22 @@
             }         
         }
         .footer__div__a {
+            grid-area: redes;
             text-align: center;
             width: 100vw;
             max-width: 768px;
             min-width: 320px;
             ul li{
                 list-style: none;
+                padding: 2px;
+                
                 a img{
                     overflow: hidden;
                     position: relative;
                     box-sizing: border-box;
                     width: 35px;
                     height: 35px;
+                    margin-right: 30px;
                 }
             }
         }
@@ -107,6 +123,14 @@
                 width: 25vw;
                 height: 5vw;
                 button {
+                    text-align: center;
+                    margin-top: 10px;
+                    width: 140px;
+                    height: 40px;
+                    font-size: (variable.$tamanoh)/3;
+                    font-family: variable.$tipoletra;
+                    border-bottom: map-get(globales.$boton , border-bottom );
+                    border-radius: map-get(globales.$boton , border-radis);
                     a{
                     font-size: 20px;
                     &:hover{
